[package]
name = "pomd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.34"
clap = { version = "4.4.18", features = ["derive"] }
crossterm = "0.27.0"
notify-rust = "4.10.0"
rodio = "0.17.3"
